--- a/event.html
+++ b/event.html
@@ -7,6 +7,6 @@
   <body>
     <input type="text"></input>
     <pre id="output"></pre>
-    <script src="backspace.js"></script>
+    <script src="event.js"></script>
   </body>
 </html>
