--- a/keydown.html
+++ b/keydown.html
@@ -7,6 +7,6 @@
   <body>
     <input type="text"></input>
     <pre id="output"></pre>
-    <script src="event.js"></script>
+    <script src="keydown.js"></script>
   </body>
 </html>
